added power support arch.
Added power support for the travis.yml file with ppc64le. This is part of the Ubuntu distribution for ppc64le.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,19 @@ jobs:
   allow_failures:
     - python: "nightly"
     - python: "pypy3"
-
+    # added power support arch.
+    - python: "3.8"
+      env:
+        - JOB=check
+          arch: ppc64le
+    - python: "3.8"
+      env:
+        - JOB=docs
+          arch: ppc64le
+  allow_failures:
+    - python: "nightly"
+    - python: "pypy3"
+      arch: ppc64le
 install: |
   case $JOB in
     tests) pip install .;;
